--- a/.github/workflows/ci-release-governance.yml
+++ b/.github/workflows/ci-release-governance.yml
@@ -11,20 +11,19 @@ permissions:
   contents: write
 
 jobs:
-  test-and-report:
+
+  # ============================================================
+  # ✅ LAYER 1 — Application Testing + Allure Report
+  # ============================================================
+  application-testing:
+    name: Layer 1 - Application Testing + Allure
     runs-on: ubuntu-latest
     timeout-minutes: 25
 
     steps:
-      # ------------------------------
-      # 1) Checkout Testing Platform Repo
-      # ------------------------------
       - name: Checkout Testing Platform Repo
         uses: actions/checkout@v4
 
-      # ------------------------------
-      # ✅ STAGE 1 — Source Validation & Pre-Checks
-      # ------------------------------
       - name: Stage 1 - Validate Repository Structure
         run: |
           echo "===== Repo Root Files ====="
@@ -42,9 +41,6 @@ jobs:
 
           echo "✅ Stage 1 validation passed"
 
-      # ------------------------------
-      # 2) Setup Java + Maven
-      # ------------------------------
       - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
@@ -52,17 +48,11 @@ jobs:
           java-version: "21"
           cache: "maven"
 
-      # ------------------------------
-      # 3) Setup Python
-      # ------------------------------
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ------------------------------
-      # 4) Install Linux dependencies for Chrome stability
-      # ------------------------------
       - name: Install Chrome dependencies
         run: |
           sudo apt-get update
@@ -78,15 +68,9 @@ jobs:
             unzip \
             curl
 
-      # ------------------------------
-      # 5) Setup Chrome
-      # ------------------------------
       - name: Setup Chrome
         uses: browser-actions/setup-chrome@v1
 
-      # ------------------------------
-      # 6) Debug versions
-      # ------------------------------
       - name: Debug Chrome + System Versions
         run: |
           echo "===== Chrome Version ====="
@@ -104,27 +88,18 @@ jobs:
           echo "===== Python Version ====="
           python --version || true
 
-      # ------------------------------
-      # 7) Clone Target App Repo
-      # ------------------------------
       - name: Clone Target Big Mart Repo
         run: |
           git clone https://github.com/asutosh-2000/Big-Mart-Sales-Prediction.git target-app
           echo "===== Target Repo Files ====="
           ls -la target-app
 
-      # ------------------------------
-      # 8) Install Flask App Dependencies
-      # ------------------------------
       - name: Install Flask App Dependencies
         run: |
           cd target-app
           python -m pip install --upgrade pip
           pip install flask joblib pandas numpy scikit-learn xgboost
 
-      # ------------------------------
-      # 9) Start Flask App (PORT 9457)
-      # ------------------------------
       - name: Start Flask App
         run: |
           cd target-app
@@ -147,9 +122,6 @@ jobs:
           echo "===== Ports Listening ====="
           ss -ltnp || true
 
-      # ------------------------------
-      # 10) Verify Flask App Running
-      # ------------------------------
       - name: Verify Flask App
         run: |
           echo "===== Checking Flask Health ====="
@@ -169,17 +141,11 @@ jobs:
           cat target-app/flask.log || true
           exit 1
 
-      # ------------------------------
-      # 11) Run Selenium Tests (Headless ON)
-      # ------------------------------
       - name: Run Automation Tests
         run: |
           cd application-testing
           mvn clean test -Dheadless=true
 
-      # ------------------------------
-      # 12) Generate Allure Report (CLI Mode)
-      # ------------------------------
       - name: Generate Allure Report (CLI Mode - No pom.xml plugin needed)
         if: always()
         run: |
@@ -195,9 +161,6 @@ jobs:
           mkdir -p target/site/allure-report
           allure generate target/allure-results -o target/site/allure-report --clean
 
-      # ------------------------------
-      # 13) Upload Allure Report as Artifact
-      # ------------------------------
       - name: Upload Allure Report as Artifact
         if: always()
         uses: actions/upload-artifact@v4
@@ -205,9 +168,6 @@ jobs:
           name: allure-report
           path: application-testing/target/site/allure-report
 
-      # ------------------------------
-      # 14) Upload Flask logs
-      # ------------------------------
       - name: Upload Flask Logs
         if: always()
         uses: actions/upload-artifact@v4
@@ -215,9 +175,6 @@ jobs:
           name: flask-log
           path: target-app/flask.log
 
-      # ------------------------------
-      # 15) Deploy Allure Report to GitHub Pages
-      # ------------------------------
       - name: Deploy Allure Report to GitHub Pages
         if: always()
         uses: peaceiris/actions-gh-pages@v4
@@ -227,30 +184,25 @@ jobs:
           publish_branch: gh-pages
           force_orphan: true
 
+
+  # ============================================================
+  # ✅ LAYER 2 — Security Testing
+  # ============================================================
   security-testing:
-    name: Security Testing (Gitleaks + Semgrep + Trivy)
+    name: Layer 2 - Security Testing (Gitleaks + Semgrep + Trivy)
     runs-on: ubuntu-latest
-    needs: test-and-report
+    needs: application-testing
     timeout-minutes: 20
 
     steps:
-      # ------------------------------
-      # 1) Checkout Repo
-      # ------------------------------
       - name: Checkout Governance Repo
         uses: actions/checkout@v4
 
-      # ------------------------------
-      # 2) Setup Python
-      # ------------------------------
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ------------------------------
-      # 3) Clone Target Repo
-      # ------------------------------
       - name: Clone Target Big Mart Repo
         run: |
           git clone https://github.com/asutosh-2000/Big-Mart-Sales-Prediction.git target-app
@@ -259,33 +211,18 @@ jobs:
           echo "===== Target Repo ====="
           ls -la target-app
 
-      # ------------------------------
-      # 4) Make scripts executable
-      # ------------------------------
       - name: Make scripts executable
         run: chmod +x security-testing/*.sh
 
-      # ------------------------------
-      # 5) Run Gitleaks (DON'T FAIL pipeline)
-      # ------------------------------
       - name: Run Gitleaks (scan target-app)
         run: ./security-testing/run-gitleaks.sh target-app || true
 
-      # ------------------------------
-      # 6) Run Semgrep (DON'T FAIL pipeline)
-      # ------------------------------
       - name: Run Semgrep (scan target-app)
         run: ./security-testing/run-semgrep.sh target-app || true
 
-      # ------------------------------
-      # 7) Run Trivy (DON'T FAIL pipeline)
-      # ------------------------------
       - name: Run Trivy (scan target-app)
         run: ./security-testing/run-trivy.sh target-app || true
 
-      # ------------------------------
-      # 8) Upload Security Reports
-      # ------------------------------
       - name: Upload Security Reports
         uses: actions/upload-artifact@v4
         if: always()
@@ -293,8 +230,12 @@ jobs:
           name: security-reports
           path: security-testing/reports/
 
+
+  # ============================================================
+  # ✅ LAYER 3 — SBOM
+  # ============================================================
   sbom-testing:
-    name: Stage 3.5 - SBOM Generation + SBOM Vulnerability Scan
+    name: Layer 3 - SBOM Generation + SBOM Vulnerability Scan
     runs-on: ubuntu-latest
     needs: security-testing
     timeout-minutes: 20
@@ -328,34 +269,24 @@ jobs:
           path: sbom-testing/reports/
 
 
-
   # ============================================================
-  # ✅ STAGE 4 — Kubernetes Readiness + KPQE Platform Testing
+  # ✅ LAYER 4 — KPQE Platform Testing (KIND + pytest)
   # ============================================================
   kpqe-platform-testing:
-    name: Stage 4 - Kubernetes Readiness + KPQE
+    name: Layer 4 - Kubernetes Readiness + KPQE Platform Testing
     runs-on: ubuntu-latest
-    needs: security-testing
+    needs: sbom-testing
     timeout-minutes: 20
 
     steps:
-      # ------------------------------
-      # 1) Checkout Repo
-      # ------------------------------
       - name: Checkout Governance Repo
         uses: actions/checkout@v4
 
-      # ------------------------------
-      # 2) Setup Python
-      # ------------------------------
       - name: Setup Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # ------------------------------
-      # 3) Install kubectl
-      # ------------------------------
       - name: Install kubectl
         run: |
           curl -LO "https://dl.k8s.io/release/$(curl -Ls https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
@@ -363,60 +294,39 @@ jobs:
           sudo mv kubectl /usr/local/bin/kubectl
           kubectl version --client
 
-      # ------------------------------
-      # 4) Setup KIND Cluster
-      # ------------------------------
       - name: Setup KIND cluster
         uses: helm/kind-action@v1.10.0
         with:
           cluster_name: kpqe-cluster
 
-      # ------------------------------
-      # 5) Verify Cluster
-      # ------------------------------
       - name: Verify Kubernetes Cluster
         run: |
           kubectl cluster-info
           kubectl get nodes -o wide
           kubectl get namespaces
 
-      # ------------------------------
-      # 6) Install KPQE dependencies
-      # ------------------------------
       - name: Install KPQE Python requirements
         run: |
           cd kpqe-platform-testing
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # ------------------------------
-      # 7) Apply Namespace + RBAC
-      # ------------------------------
       - name: Apply KPQE Namespace + RBAC
         run: |
           kubectl apply -f kpqe-platform-testing/k8s/namespace.yaml
           kubectl apply -f kpqe-platform-testing/k8s/kpqe-rbac.yaml
 
-      # ------------------------------
-      # 8) Run KPQE Platform Tests (pytest)
-      # ------------------------------
       - name: Run KPQE Platform Tests
         run: |
           cd kpqe-platform-testing
           pytest -q platform-tests --disable-warnings --maxfail=1
 
-      # ------------------------------
-      # 9) Run Release Gate Decision Engine
-      # ------------------------------
       - name: Evaluate KPQE Quality Gate
         run: |
           cd kpqe-platform-testing
           python -m quality_gates.evaluate_platform > kpqe-release-decision.txt
           cat kpqe-release-decision.txt
 
-      # ------------------------------
-      # 10) Upload KPQE Reports
-      # ------------------------------
       - name: Upload KPQE Reports
         uses: actions/upload-artifact@v4
         if: always()
@@ -424,6 +334,3 @@ jobs:
           name: kpqe-platform-reports
           path: |
             kpqe-platform-testing/kpqe-release-decision.txt
-
-
-            
