--- a/.github/workflows/ci-release-governance.yml
+++ b/.github/workflows/ci-release-governance.yml
@@ -334,3 +334,35 @@ jobs:
           name: kpqe-platform-reports
           path: |
             kpqe-platform-testing/kpqe-release-decision.txt
+
+
+  release-dashboard:
+    name: Layer 5 - Single Consolidated Release Dashboard
+    runs-on: ubuntu-latest
+    needs: kpqe-platform-testing
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout Governance Repo
+        uses: actions/checkout@v4
+
+      - name: Setup Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dashboard requirements
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r release-dashboard/requirements.txt
+
+      - name: Generate dashboard
+        run: |
+          python release-dashboard/generate-dashboard.py
+
+      - name: Upload Release Dashboard Artifact
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: release-dashboard
+          path: release-dashboard/output/
