--- a/.github/workflows/ci-release-governance.yml
+++ b/.github/workflows/ci-release-governance.yml
@@ -493,7 +493,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r release-decision/requirements.txt
-
       # ============================================================
       # Download ONLY release-dashboard artifact for decision engine
       # ============================================================
@@ -636,9 +635,20 @@ jobs:
           mkdir -p public/decision
           cp -r artifacts/final-release-decision/* public/decision/ || true
 
-          # ---------------------------
+          # ============================================================
+          # ✅ FIX: Auto-create index.html inside folders (avoid 404)
+          # ============================================================
+          for d in allure security sbom kpqe dashboard decision; do
+            if [ -d "public/$d" ] && [ ! -f "public/$d/index.html" ]; then
+              echo "<!DOCTYPE html><html><head><meta charset='utf-8'><title>$d reports</title></head><body><h2>$d reports</h2><p>No index.html found. Showing file list:</p><pre>" > "public/$d/index.html"
+              ls -la "public/$d" >> "public/$d/index.html" || true
+              echo "</pre></body></html>" >> "public/$d/index.html"
+            fi
+          done
+
+          # ============================================================
           # Root index.html
-          # ---------------------------
+          # ============================================================
           cat > public/index.html << 'EOF'
           <!DOCTYPE html>
           <html>
